<resources>
    <string name="app_name" translatable="false">ProgressNote</string>
    <string name="chinese_name">天天笔记</string>
    <string name="description">记录当下，规划未来</string>
    <string name="title">（空）</string>
    <string name="body">（空）</string>
    <string name="date">（空）</string>
    <string name="date_special">（空）</string>
    <string name="time">（空）</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="about_us">关于我们</string>
    <string name="newNote">新建笔记</string>
    <string name="editNote">编辑笔记</string>
    <string name="please_title">请在此键入标题</string>
    <string name="please_text">请在此键入文本</string>
    <string name="saveSuccess">保存成功！</string>
    <string name="deleteSuccess">删除成功！</string>
    <string name="exitApp">再按一次退出程序</string>
    <string name="formatDate">yyyy年MM月dd日    HH:mm:ss</string>
    <string name="formatDate_User">yyyy年MM月dd日 HH:mm:ss</string>
    <string name="format_year_month_day">yyyy年MM月dd日</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">点此注册</string>
    <string name="filter_username" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz_ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="register_hint">还没有账号？</string>
    <string name="login_userId">用户ID：%1$d</string>
    <string name="login_username">用户名：%1$s</string>
    <string name="last_login">上次登录：%1$s</string>
    <string name="last_sync">上次同步：%1$s</string>
    <string name="exit_login">退出登录</string>
    <string name="sync_SC">笔记同步（云端→本地）</string>
    <string name="sync_CS">笔记同步（本地→云端）</string>
    <string name="search">查找</string>
    <string name="search_hint">若不输入则显示全部</string>
    <string name="arrangement">排列方式</string>
    <string name="theme">主题</string>
    <string name="close">关闭</string>
    <string name="back">返回</string>
    <string name="welcome">欢迎</string>
    <string name="share">分享</string>
    <string name="num_count">字数统计：%1$d字</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="skip">跳过</string>
    <string name="have_a_try">立即体验</string>
    <string name="dot">圆点</string>
    <string name="title_activity_settings">设置</string>
    <string name="sync_header">自动同步</string>
    <string name="attachment_title">启动应用时</string>
    <string name="remember_username">记住用户名</string>
    <string name="remember_password">记住密码</string>
    <string name="feedback">反馈</string>
    <string name="code">验证码</string>
    <string name="logout_status">尚未登陆！</string>
    <string name="check_update">检查更新</string>
    <string name="checking">检查中…</string>
    <string name="current_version">通用</string>
    <string name="version_info">版本号：%1$s\n构建日期：%2$d\n包名：%3$s</string>
    <string name="latest_version">当前已是最新版本</string>
    <string name="download_new_version">有新版本发布，请至天天笔记主页下载</string>
    <string name="about">关于</string>
    <string name="modify_note">修改笔记时</string>
    <string name="modify_note_summary">包括新增、编辑、保存、删除等</string>
    <string name="launch_sync_summary">适用于多台设备的场景</string>
    <string name="data">数据</string>
    <string name="delete_note_summary">清除所有笔记</string>
    <string name="delete_all_summary">注销用户</string>注销用户/string>
    <string name="developer">开发者</string>
    <string name="code_settings">代码</string>
    <string name="icon">图标</string>
    <string name="my_homepage">我的主页</string>
    <string name="official_homepage">天天笔记主页</string>
    <string name="blog">博客</string>
    <string name="feedback_summary">遇到bug或者有建议请告诉我们</string>
    <string name="warning">警告</string>
    <string name="delete_all_notice">这将清除本地和云端所有数据并退出登录\n无法重新使用该用户名注册\n此操作无法恢复\n是否继续？</string>
    <string name="clear">清除</string>
    <string name="cancel">取消</string>
    <string name="clear_successfully">清除完毕！</string>
    <string name="delete_note_notice">您已开启自动同步\n在清除本地笔记的同时，\n云端笔记也将被清除\n此操作无法恢复\n是否继续？</string>
    <string name="delete_note_warning">这将清除本地所有笔记\n此操作无法恢复\n是否继续？</string>
    <string name="notice">提示</string>
    <string name="delete_button_notice">是否要删除这条笔记？</string>
    <string name="unsaved_notice">有尚未保存的修改\n是否保存？</string>
    <string name="do_not_save">不保存</string>
    <string name="delete_format">是否要删除“%1$s”？</string>
    <string name="search_notice">请输入要查找的内容</string>
    <string name="find_notes">找到%1$d条笔记</string>
    <string name="sync">同步</string>
    <string name="sync_SC_notice">这将导致本地数据被云端数据替换\n是否继续？</string>
    <string name="sync_CS_notice">这将导致云端数据被本地数据替换\n是否继续？</string>
    <string name="exit">退出</string>
    <string name="exit_notice">是否退出登录？</string>
    <string name="exit_login_notice">已退出登录！</string>
    <string name="please_wait">请稍后</string>
    <string name="syncing">同步中…</string>
    <string name="sync_successfully">同步成功！</string>
    <string name="upload_successfully">上传成功！</string>
    <string name="open_failed">打开失败！</string>
    <string name="open_successfully">打开成功！</string>
    <string name="operation_cancelled">取消操作</string>
    <string name="empty">无</string>
    <string name="without_external_permission">未授权外置存储读写权限，无法使用！</string>
    <string name="not_login_notice">请先登陆后再使用！</string>
    <string name="register_sucessfully">注册成功！</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="saturday">" 星期六 "</string>
    <string name="sunday">" 星期日 "</string>
    <string name="monday">" 星期一 "</string>
    <string name="tuesday">" 星期二 "</string>
    <string name="wednesday">" 星期三 "</string>
    <string name="thursday">" 星期四 "</string>
    <string name="friday">" 星期五 "</string>
    <string name="setting_language_title">语言</string>
    <string name="privacy_title">隐私政策</string>
    <string name="privacy_content">您在使用“天天笔记”前必须阅读我们的隐私政策，接受后才可继续使用本软件。</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="read">阅读</string>
    <string name="register_successfully">注册成功！</string>
    <string name="username_already_exists">用户名已存在！</string>
    <string name="login_successfully">登录成功！</string>
    <string name="username_not_exists">用户不存在！</string>
    <string name="username_banned">该用户已被禁用！</string>
    <string name="wrong_username_or_password">用户名或密码错误！</string>
</resources>
