<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_info_black_24dp"
        app:title="@string/current_version">
        <Preference
            android:icon="@mipmap/icon"
            android:key="version" />
        <Preference
            android:key="check_update"
            android:summary="@string/checking"
            android:title="@string/check_update" />
        <Preference
            android:key="language"
            android:title="@string/setting_language_title" />
        <Preference
            android:key="privacy_policy"
            android:title="@string/privacy_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_sync_black_24dp"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="modify_sync"
            app:summary="@string/modify_note_summary"
            app:title="@string/modify_note" />

        <SwitchPreferenceCompat
            app:dependency="modify_sync"
            app:key="launch_sync"
            app:summary="@string/launch_sync_summary"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_storage_black_24dp"
        app:title="@string/data">

        <Preference
            app:key="delete_note"
            app:title="@string/delete_note_summary" />

        <Preference
            app:key="delete_all"
            app:title="@string/delete_all_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_language_black_24dp"
        app:title="@string/about">

        <Preference
            android:key="my_homepage"
            android:summary="zerokirby.cn"
            android:title="@string/my_homepage" />

        <Preference
            android:key="homepage"
            android:summary="note.zerokirby.cn"
            android:title="@string/official_homepage" />

        <Preference
            android:key="blog"
            android:summary="blog.zerokirby.cn"
            android:title="@string/blog" />

        <Preference
            android:key="github"
            android:summary="ProgressNote"
            android:title="GitHub" />

        <Preference
            android:key="feedback"
            android:summary="@string/feedback_summary"
            android:title="@string/feedback" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_code_black_24dp"
        app:title="@string/developer">

        <Preference
            android:key="code"
            android:summary="小林卡比 GitHub@0Kirby"
            android:title="@string/code_settings" />

        <Preference
            android:key="ui"
            android:summary="蓝色的海 GitHub@BlueOcean1998"
            android:title="UI" />

        <Preference
            android:key="theme"
            android:summary="汝南京 GitHub@EndureBlaze"
            android:title="@string/theme" />

        <Preference
            android:key="icon"
            android:summary="Yoshi1999 哔哩哔哩@YoshiX1999"
            android:title="@string/icon" />

    </PreferenceCategory>

</PreferenceScreen>
